loopfor.LoopStairs.scala.error
Compilation error:
LoopStairs:13: error: not found: value i
for (i <- i to 4) {
          ^