loopfor.LoopStairs.scala.code

for (i <- 1 to 4) {
  forward();
}


while (isFacingWall()) {
	left();
	forward();
  right();
}

for (i <- i to 4) {
  forward();
}